[gd_scene load_steps=22 format=4 uid="uid://3byq85jh78o1"]

[ext_resource type="Script" uid="uid://dimk00kx0fxk5" path="res://scripts/Battle.gd" id="1_gbtjg"]
[ext_resource type="Script" uid="uid://bcghxxakdsd3q" path="res://scripts/system/ModeSwitcher.gd" id="2_orp30"]
[ext_resource type="PackedScene" uid="uid://bmg5ivlx0bfvn" path="res://scenes/UI/turn_timer.tscn" id="3_qieyk"]
[ext_resource type="PackedScene" uid="uid://cqtct4bo5es3n" path="res://scenes/UI/TypingPanel.tscn" id="4_7cxk5"]
[ext_resource type="PackedScene" uid="uid://0ij85ox8j5li" path="res://scenes/UI/DirectionsPanel.tscn" id="5_fvyqu"]
[ext_resource type="PackedScene" uid="uid://c566mi0ppmg2g" path="res://scenes/UI/InfoPanel.tscn" id="6_6f7rb"]
[ext_resource type="PackedScene" uid="uid://ts0saqd7n1w" path="res://scenes/UI/ScorePanel.tscn" id="7_xenrh"]
[ext_resource type="PackedScene" uid="uid://bwyo15q3n6htl" path="res://scenes/UI/BottomPanel.tscn" id="8_myede"]
[ext_resource type="PackedScene" uid="uid://cpnrkcgy61lno" path="res://scenes/UI/GameOverPanel.tscn" id="9_w2dtk"]
[ext_resource type="PackedScene" uid="uid://bwjuv6o6yi6rb" path="res://scenes/UI/ComboPanel.tscn" id="10_r63kx"]
[ext_resource type="PackedScene" uid="uid://cgv2y31m0qgut" path="res://scenes/UI/SpeedPanel.tscn" id="11_ykspv"]
[ext_resource type="PackedScene" uid="uid://c6xw45ilhwral" path="res://scenes/chars/mage_1.tscn" id="12_e37tc"]
[ext_resource type="PackedScene" uid="uid://bam71iqwn6ufo" path="res://scenes/chars/TheWitch.tscn" id="13_gbtjg"]
[ext_resource type="Texture2D" uid="uid://2xdj6jeu6uhg" path="res://assets/backgrounds/background1.png" id="14_ybm2i"]
[ext_resource type="Texture2D" uid="uid://qpg8jfx23o6f" path="res://assets/tilesets/tileset_1.png" id="15_c50xt"]
[ext_resource type="AudioStream" uid="uid://dtderyonblk36" path="res://assets/bgm/march_of_iron.wav" id="16_knqk6"]
[ext_resource type="Script" uid="uid://cy4qmcgfo0a4c" path="res://scripts/system/ProjectilePool.gd" id="17_dqtoc"]
[ext_resource type="PackedScene" uid="uid://baj4vmtxbrupq" path="res://scenes/chars/projectile_1.tscn" id="18_6aana"]
[ext_resource type="PackedScene" uid="uid://cxwta47m0lft8" path="res://scenes/chars/projectile_2.tscn" id="19_07tkk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wtc3i"]
texture = ExtResource("15_c50xt")
4:1/size_in_atlas = Vector2i(2, 2)
4:1/0 = 0
4:3/size_in_atlas = Vector2i(2, 1)
4:3/0 = 0
4:4/size_in_atlas = Vector2i(2, 1)
4:4/0 = 0
7:1/size_in_atlas = Vector2i(2, 1)
7:1/0 = 0
1:1/size_in_atlas = Vector2i(2, 2)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.917498, -15.827568, 16.277214, -15.827568, 15.737637, 15.82757, -15.917498, 16.00743)
1:3/size_in_atlas = Vector2i(2, 2)
1:3/0 = 0

[sub_resource type="TileSet" id="TileSet_q5vv3"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_wtc3i")

[node name="Battle" type="Node2D"]
script = ExtResource("1_gbtjg")
typing_panel_path = NodePath("CanvasLayer/UI/TypingPanel")
directions_panel_path = NodePath("CanvasLayer/UI/DirectionsPanel")
timer_path = NodePath("CanvasLayer/UI/TurnTimer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModeSwitcher" type="Node" parent="CanvasLayer/UI"]
unique_name_in_owner = true
script = ExtResource("2_orp30")
typing_path = NodePath("../TypingPanel")
defend_path = NodePath("../DirectionsPanel")
bottom_path = NodePath("../BottomPanel")
timer_path = NodePath("../TurnTimer")

[node name="TurnTimer" parent="CanvasLayer/UI" instance=ExtResource("3_qieyk")]
unique_name_in_owner = true
layout_mode = 1

[node name="TypingPanel" parent="CanvasLayer/UI" node_paths=PackedStringArray("timer_ref") instance=ExtResource("4_7cxk5")]
unique_name_in_owner = true
layout_mode = 1
timer_ref = NodePath("../TurnTimer")

[node name="DirectionsPanel" parent="CanvasLayer/UI" node_paths=PackedStringArray("timer_ref") instance=ExtResource("5_fvyqu")]
unique_name_in_owner = true
visible = false
layout_mode = 1
timer_ref = NodePath("../TurnTimer")
player_path = NodePath("../../../Mage_1")

[node name="InfoPanel" parent="CanvasLayer/UI" instance=ExtResource("6_6f7rb")]
unique_name_in_owner = true
layout_mode = 1

[node name="ScorePanel" parent="CanvasLayer/UI" instance=ExtResource("7_xenrh")]
layout_mode = 1
typing_panel_path = NodePath("../TypingPanel")

[node name="BottomPanel" parent="CanvasLayer/UI" instance=ExtResource("8_myede")]
unique_name_in_owner = true
z_index = 500
z_as_relative = false
layout_mode = 1

[node name="GameOverPanel" parent="CanvasLayer/UI" instance=ExtResource("9_w2dtk")]
unique_name_in_owner = true
z_index = 1000
z_as_relative = false
layout_mode = 1

[node name="ComboPanel" parent="CanvasLayer/UI" instance=ExtResource("10_r63kx")]
layout_mode = 1

[node name="SpeedPanel" parent="CanvasLayer/UI" instance=ExtResource("11_ykspv")]
layout_mode = 1

[node name="Mage_1" parent="." instance=ExtResource("12_e37tc")]
unique_name_in_owner = true
position = Vector2(169, 280.00003)
typing_panel_path = NodePath("../CanvasLayer/UI/TypingPanel")

[node name="Mage_2" parent="." instance=ExtResource("13_gbtjg")]
position = Vector2(491, 293)

[node name="Stage" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Stage"]

[node name="BG" type="Sprite2D" parent="Stage/ParallaxBackground"]
position = Vector2(321, 99.00001)
scale = Vector2(0.41659537, 0.41659537)
texture = ExtResource("14_ybm2i")

[node name="TileMapLayer" type="TileMapLayer" parent="Stage"]
tile_map_data = PackedByteArray("AAAAABUAAAABAAMAAAABABUAAAABAAMAAAACABUAAAABAAMAAAADABUAAAABAAMAAAAEABUAAAABAAMAAAAFABUAAAABAAMAAAAGABUAAAABAAMAAAAHABUAAAABAAMAAAAIABUAAAABAAMAAAAJABUAAAABAAMAAAAKABUAAAABAAMAAAALABUAAAABAAMAAAAMABUAAAABAAMAAAANABUAAAABAAMAAAAOABUAAAABAAMAAAAPABUAAAABAAMAAAAQABUAAAABAAMAAAARABUAAAABAAMAAAASABUAAAABAAMAAAATABUAAAABAAMAAAAUABUAAAABAAMAAAAVABUAAAABAAMAAAAWABUAAAABAAMAAAAXABUAAAABAAMAAAAYABUAAAABAAMAAAAZABUAAAABAAMAAAAaABUAAAABAAMAAAAbABUAAAABAAMAAAAcABUAAAABAAMAAAAdABUAAAABAAMAAAAeABUAAAABAAMAAAAfABUAAAABAAMAAAAgABUAAAABAAMAAAAhABUAAAABAAMAAAAiABUAAAABAAMAAAAjABUAAAABAAMAAAAkABUAAAABAAMAAAAlABUAAAABAAMAAAAmABUAAAABAAMAAAAnABUAAAABAAMAAAAAABQAAAABAAMAAAABABQAAAABAAMAAAACABQAAAABAAMAAAADABQAAAABAAMAAAAEABQAAAABAAMAAAAFABQAAAABAAMAAAAGABQAAAABAAMAAAAHABQAAAABAAMAAAAIABQAAAABAAMAAAAJABQAAAABAAMAAAAKABQAAAABAAMAAAALABQAAAABAAMAAAAMABQAAAABAAMAAAANABQAAAABAAMAAAAOABQAAAABAAMAAAAPABQAAAABAAMAAAAQABQAAAABAAMAAAARABQAAAABAAMAAAASABQAAAABAAMAAAATABQAAAABAAMAAAAUABQAAAABAAMAAAAVABQAAAABAAMAAAAWABQAAAABAAMAAAAXABQAAAABAAMAAAAYABQAAAABAAMAAAAZABQAAAABAAMAAAAaABQAAAABAAMAAAAbABQAAAABAAMAAAAcABQAAAABAAMAAAAdABQAAAABAAMAAAAeABQAAAABAAMAAAAfABQAAAABAAMAAAAgABQAAAABAAMAAAAhABQAAAABAAMAAAAiABQAAAABAAMAAAAjABQAAAABAAMAAAAkABQAAAABAAMAAAAlABQAAAABAAMAAAAmABQAAAABAAMAAAAnABQAAAABAAMAAAAAABIAAAABAAEAAAABABIAAAABAAEAAAACABIAAAABAAEAAAADABIAAAABAAEAAAAEABIAAAABAAEAAAAFABIAAAABAAEAAAAGABIAAAABAAEAAAAHABIAAAABAAEAAAAIABIAAAABAAEAAAAJABIAAAABAAEAAAAKABIAAAABAAEAAAALABIAAAABAAEAAAAMABIAAAABAAEAAAANABIAAAABAAEAAAAOABIAAAABAAEAAAAPABIAAAABAAEAAAAQABIAAAABAAEAAAARABIAAAABAAEAAAASABIAAAABAAEAAAATABIAAAABAAEAAAAUABIAAAABAAEAAAAVABIAAAABAAEAAAAWABIAAAABAAEAAAAXABIAAAABAAEAAAAYABIAAAABAAEAAAAZABIAAAABAAEAAAAaABIAAAABAAEAAAAbABIAAAABAAEAAAAcABIAAAABAAEAAAAdABIAAAABAAEAAAAeABIAAAABAAEAAAAfABIAAAABAAEAAAAgABIAAAABAAEAAAAhABIAAAABAAEAAAAiABIAAAABAAEAAAAjABIAAAABAAEAAAAkABIAAAABAAEAAAAlABIAAAABAAEAAAAmABIAAAABAAEAAAAnABIAAAABAAEAAAA=")
tile_set = SubResource("TileSet_q5vv3")

[node name="BGM" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("16_knqk6")
volume_db = -6.0
autoplay = true
bus = &"BGM"

[node name="PlayerProjectilePool" type="Node" parent="."]
script = ExtResource("17_dqtoc")
projectile_scene = ExtResource("18_6aana")
metadata/_custom_type_script = "uid://cy4qmcgfo0a4c"

[node name="EnemyProjectilePool" type="Node" parent="."]
script = ExtResource("17_dqtoc")
projectile_scene = ExtResource("19_07tkk")
metadata/_custom_type_script = "uid://cy4qmcgfo0a4c"

[connection signal="timeout" from="CanvasLayer/UI/TurnTimer" to="CanvasLayer/UI/TypingPanel" method="_on_timer_timeout"]
